# AndroidFFmpeg

./: ReadMe.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fshader_0.glsl  fshader_1.glsl  fshader_10.glsl  fshader_2.glsl  fshader_3.glsl  fshader_4.glsl  fshader_5.glsl  fshader_6.glsl  fshader_7.glsl
app/src/main/cpp/: CMakeLists.txt  learn-ffmpeg.cpp
app/src/main/cpp/common/: ThreadSafeQueue.h
app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.cpp  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/: BaseGLRender.h
app/src/main/cpp/player/render/audio/: AudioGLRender.cpp  AudioGLRender.h  AudioRender.cpp  AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoGLRender.cpp  VideoGLRender.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/recorder/: GLCameraRender.cpp  GLCameraRender.h  MediaRecorder.cpp  MediaRecorder.h  MediaRecorderContext.cpp  MediaRecorderContext.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
app/src/main/res/layout/: activity_gl_media_player.xml  activity_main.xml  activity_media_player.xml  content_main.xml
app/src/main/res/menu/: menu_camera.xml  menu_main.xml
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
